--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Font Awesome Library -->
+  <link rel="stylesheet" href="../src/all.min.css">
 </head>
 <body>
   <app-root></app-root>
